--- a/Logistic.UILayer/Logistic.UILayer.csproj
+++ b/Logistic.UILayer/Logistic.UILayer.csproj
@@ -405,6 +405,7 @@
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Profile\Index.cshtml" />
     <Content Include="Views\Message\Inbox.cshtml" />
+    <Content Include="Views\Message\Outbox.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
